--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,53 +3,36 @@
 
 /*==================== VARIABLES CSS ====================*/
 :root {
-    --header-height: 3rem;
+    --header-height: 7rem;
+    --footer-height: 2rem;
 
     /*========== Colors ==========*/
-    /* Change favorite color */
     --hue-color: 250;
-    /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
-    /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
-    --first-color-second: hsl(var(--hue-color), 69%, 61%);
-    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
-    --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+    --first-color-light: hsl(var(--hue-color), 92%, 85%);
     --title-color: hsl(var(--hue-color), 8%, 15%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
-    --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
-    --container-color: #fff;
-    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
-    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
 
+    /*========== Font size ==========*/
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
     --big-font-size: 2rem;
-    --h1-font-size: 1.5rem;
-    --h2-font-size: 1.25rem;
-    --h3-font-size: 1.125rem;
     --normal-font-size: .938rem;
     --small-font-size: .813rem;
-    --smaller-font-size: .75rem;
 
     /*========== Font weight ==========*/
     --font-medium: 500;
     --font-semi-bold: 600;
 
-    /*========== Margenes Bottom ==========*/
+    /*========== Margenes ==========*/
     /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
-    --mb-0-25: .25rem;
-    --mb-0-5: .5rem;
-    --mb-0-75: .75rem;
-    --mb-1: 1rem;
-    --mb-1-5: 1.5rem;
-    --mb-2: 2rem;
-    --mb-2-5: 2.5rem;
-    --mb-3: 3rem;
+    --page-indent: 2rem;
+
 
     /*========== z index ==========*/
     --z-tooltip: 10;
@@ -61,19 +44,10 @@
 @media screen and (min-width: 968px) {
     :root {
         --big-font-size: 3rem;
-        --h1-font-size: 2.25rem;
-        --h2-font-size: 1.5rem;
-        --h3-font-size: 1.25rem;
         --normal-font-size: 1rem;
         --small-font-size: .875rem;
-        --smaller-font-size: .813rem;
     }
 }
-
-/*========== Variables Dark theme ==========*/
-
-
-/*========== Button Dark/Light ==========*/
 
 
 /*==================== BASE ====================*/
@@ -83,12 +57,7 @@
     margin: 0;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body {
-    margin: 0 0 var(--header-height) 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
@@ -118,7 +87,9 @@ img {
 
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
-    padding: 2rem 0 4rem;
+    height: 100%;
+    padding: 0 var(--page-indent);
+    scroll-snap-align: start;
 }
 
 .section__title {
@@ -129,7 +100,6 @@ img {
 .section__subtitle {
     display: block;
     font-size: var(--small-font-size);
-    margin-bottom: var(--mb-3);
 }
 
 .section__title,
@@ -144,28 +114,87 @@ img {
 
 /*==================== LAYOUT ====================*/
 .header {
-    /* width: 100%;
-    position: fixed; */
+    height: var(--header-height);
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+
+    padding: 0 var(--page-indent);
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    background-color: var(--body-color);
 }
 
-.container {
-    max-width: 768px;
-    margin-left: var(--mb-1-5);
-    margin-right: var(--mb-1-5);
-}
+.main {
+    margin-top:  var(--header-height);
+    height: calc(100vh - var(--header-height) - var(--footer-height));
 
-.grid {
-    display: grid;
-    gap: 1.5rem;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
 }
 
 .footer {
     width: 100%;
+    height: var(--footer-height);
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: var(--z-fixed);
+
+    display: flex;
+    align-items: center;
+
+    padding: 0 var(--page-indent);
     background-color: var(--body-color);
 }
 
 /*==================== NAV ====================*/
+.navbar {
+    display: flex;
+}
+
+.navbar-item {
+    padding-left: 4rem;
+}
+
+.logo {
+    height: 5rem;
+}
+
+
+/* .a,
+.b {
+    height: 100%;
+}
+.a {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 80px));
+    background: #FE8F8F;
+}
+.b {
+    clip-path: polygon(0 0, 100% 80px, 100% 100%, 0 100%);
+    margin-top: -60px;
+    background: rgb(100, 100, 211);
+} */
+
+/*==================== SECTION ====================*/
+.hero {
+    background-color: aquamarine;
+}
+
+.about {
+    background-color: crimson;
+}
+
+.projects {
+    background-color: antiquewhite;
+}
+
+.contact {
+    background-color: yellowgreen;
+}
