--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,21 +9,20 @@
     /*========== Colors ==========*/
     --hue-color: 250;
 
-    --first-color: hsl(var(--hue-color), 69%, 61%);
-    --first-color-light: hsl(var(--hue-color), 92%, 85%);
-    --title-color: hsl(var(--hue-color), 8%, 15%);
-    --text-color: hsl(var(--hue-color), 8%, 45%);
-    --text-color-light: hsl(var(--hue-color), 8%, 65%);
-    --body-color: hsl(var(--hue-color), 60%, 99%);
+    --first-color: #5680E9;
+    --title-color: #8860D0;
+    --text-color: #5AB9EA;
+    --text-color-light: #C1C8E4;
+    --body-color: #84CEEB;
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
 
     /*========== Font size ==========*/
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-    --big-font-size: 2rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .813rem;
+    --big-font-size: 3rem;
+    --normal-font-size: 1rem;
+    --small-font-size: 0.5rem;
 
     /*========== Font weight ==========*/
     --font-medium: 500;
@@ -43,9 +42,9 @@
 /* Font size for large devices */
 @media screen and (min-width: 968px) {
     :root {
-        --big-font-size: 3rem;
-        --normal-font-size: 1rem;
-        --small-font-size: .875rem;
+        --big-font-size: 3.5rem;
+        --normal-font-size: 1.25rem;
+        --small-font-size: 1rem;
     }
 }
 
@@ -70,6 +69,7 @@ h3,
 h4 {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
+    font-size: var(--big-font-size);
 }
 
 ul {
@@ -90,26 +90,52 @@ img {
     height: 100%;
     padding: 0 var(--page-indent);
     scroll-snap-align: start;
+
+    border: 5px solid black;
+}
+
+.section__link-wrapper {
+    padding: 5rem;
+}
+
+.section__link {
+    margin: 2rem 0;
 }
 
 .section__title {
-    font-size: var(--h1-font-size);
+    font-size: var(--big-font-size);
     color: var(--title-color);
 }
 
 .section__subtitle {
-    display: block;
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
 }
 
 .section__title,
 .section__subtitle {
-    text-align: center;
+    text-align: left;
 }
 
 .section__text {
     font-size: var(--normal-font-size);
     color: var(--text-color);
+}
+
+.btn {
+    padding: 0.5rem;
+    background-color: var(--body-color);
+    border: .25rem solid var(--body-color);
+    border-radius: .25rem;
+}
+
+.btn-contact-me {
+    margin-top: 2rem;
+}
+
+.btn:hover {
+    color: white;
+    background-color: var(--first-color);
+    transition: 0.2s ease-in;
 }
 
 /*==================== LAYOUT ====================*/
@@ -163,6 +189,11 @@ img {
     padding-left: 4rem;
 }
 
+.navbar__item a {
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+} 
+
 .logo {
     height: 5rem;
 }
@@ -185,6 +216,13 @@ img {
 /*==================== SECTION ====================*/
 .hero {
     background-color: aquamarine;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.hero-image {
+    height: 17rem;
 }
 
 .about {
