--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,14 +158,15 @@ img {
 
 .main {
     margin-top:  var(--header-height);
-    height: calc(100vh - var(--header-height) - var(--footer-height));
+    /* height: calc(100vh - var(--header-height) - var(--footer-height)); */
+    height: calc(100vh - var(--header-height));
 
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
 }
 
-.footer {
+/* .footer {
     width: 100%;
     height: var(--footer-height);
     position: fixed;
@@ -178,7 +179,7 @@ img {
 
     padding: 0 var(--page-indent);
     background-color: var(--body-color);
-}
+} */
 
 /*==================== NAV ====================*/
 .navbar__list {
