--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,8 @@
             <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aperiam veniam, error cum dolorum ducimus aliquid sunt assumenda eum possimus, voluptatum, velit ullam magni accusantium. Cum minima eum quod suscipit hic assumenda quidem repellat asperiores ad perspiciatis corrupti molestiae illo, doloremque natus sit, consequatur debitis unde iusto culpa nisi! Consequatur?</p>
         </section>
     </main>
-    <footer class="footer">
+    {% comment %} <footer class="footer">
         <p>uuw</p>
-    </footer>
+    </footer> {% endcomment %}
 </body>
 </html>
