--- a/templates/index.html
+++ b/templates/index.html
@@ -25,18 +25,18 @@
     </header>
     <main class="main">
         <section class="section hero" id="hero">
-            <div class="section__links-wrapper">
-                <div class="section__link">
-                    <a href="https://www.instagram.com/sparshchaurasia0021/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-3x fa-instagram"></i></a>
+            <div class="hero__links-wrapper">
+                <div class="hero__link hero__link--instagram">
+                    <a href="https://www.instagram.com/sparshchaurasia0021/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-2x fa-instagram"></i></a>
                 </div>
-                <div class="section__link">
-                    <a href="https://discord.gg/Fh5CctFSXP" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-3x fa-discord"></i></a>
+                <div class="hero__link hero__link--discord">
+                    <a href="https://discord.gg/Fh5CctFSXP" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-2x fa-discord"></i></a>
                 </div>
-                <div class="section__link">
-                    <a href="mailto:sparshchaurasia0021@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-3x fa-envelope"></i></a>
+                <div class="hero__link hero__link--gmail">
+                    <a href="mailto:sparshchaurasia0021@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-2x fa-envelope"></i></a>
                 </div>
-                <div class="section__link">
-                    <a href="http://github.com/SparshChaurasia/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-3x fa-github"></i></a>
+                <div class="hero__link hero__link--github">
+                    <a href="http://github.com/SparshChaurasia/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-2x fa-github"></i></a>
                 </div>
             </div>
             <div class="section__content-wrapper">
