--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 /*==================== GOOGLE FONTS ====================*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@1,500&display=swap');
 
 /*==================== VARIABLES CSS ====================*/
 :root {
@@ -85,12 +86,29 @@ img {
     height: auto;
 }
 
+/*========== Hide Scrollbar ==========*/
+.main {
+    /* Internet Explorer 10+ and Edge */
+    -ms-overflow-style: none;
+
+    /* Firefox */
+    scrollbar-width: none;
+    /* Older versions of Firefox */
+    overflow: -moz-scrollbars-none;
+}
+
+.main::-webkit-scrollbar {
+    /* Safari, Chrome and Opera */
+    display: none;
+}
+
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
     height: 100%;
     padding: 0 var(--page-indent);
     scroll-snap-align: start;
 
+    padding: 3rem 5rem;
     border: 5px solid black;
 }
 
@@ -105,13 +123,44 @@ img {
 
 .section__title,
 .section__subtitle {
-    text-align: left;
+    text-align: center;
 }
 
 .section__text {
     font-size: var(--normal-font-size);
     color: var(--text-color);
 }
+
+/* .section__quote {
+    font-family: 'Gelasio', serif;
+    max-width: 50%;
+    height: 100%;
+    border: 2px solid black;
+}
+
+.section__quote::before {
+    content: "\201c";
+    font-size: 5rem;
+    display: block;
+    margin-bottom: -3rem;
+    margin-top: -28px;
+}
+
+.section__quote--text {
+    color: var(--first-color);
+    font-size: 2rem;
+
+}
+
+.section__quote--credit {
+    font-size: var(--small-font-size);
+    font-weight: bold;
+    text-align: right;
+}
+
+.section__quote--credit::before {
+    content: "\2014\0020";
+} */
 
 .btn {
     padding: 0.5rem;
@@ -212,6 +261,11 @@ img {
     justify-content: space-evenly;
 }
 
+.hero__title,
+.hero__subtitle {
+    text-align: left;
+}
+
 .hero-image {
     height: 17rem;
 }
@@ -236,7 +290,21 @@ img {
 
 /*=============== About Section ===============*/
 .about {
-    background-color: crimson;
+    background-color: rgb(255, 136, 162);
+}
+
+.about__content-wrapper {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.about__text-wrapper {
+    max-width: 50rem;
+}
+
+.about__image {
+    height: 15rem;
 }
 
 /*=============== Projects Section ===============*/
