--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,3 +316,57 @@ img {
 .contact {
     background-color: yellowgreen;
 }
+
+.contact__content-wrapper {
+    display: flex;
+    justify-content: space-around;
+}
+
+.contact__link-wrapper {
+    height: 50%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.contact__link {
+    display: flex;
+}
+
+.contact__link--title {
+    font-size: var(--normal-font-size);
+}
+
+.contact__link--text {
+    font-size: var(--small-font-size);
+}
+
+.contacts__email {
+    color: black;
+}
+
+.contact__form--field {
+    background-color: cornflowerblue;
+    border-radius: .5rem;
+    padding: .75rem 1rem .25rem;
+}
+
+.contact__form--field-wrapper {
+    display: flex;
+}
+
+.contact__form--field-name,
+.contact__form--field-email {
+    width: 50%;
+}
+
+.contact__form-input {
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 8;
+}
