--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
             <ul class="navbar__list">
                 <li class="navbar__item"><a href="#hero">Home</a></li>
                 <li class="navbar__item"><a href="#about">About</a></li>
+                <li class="navbar__item"><a href="#skills">Skills</a></li>
                 <li class="navbar__item"><a href="#projects">Projects</a></li>
                 <li class="navbar__item"><a href="#contact">Contact</a></li>
             </ul>
@@ -47,7 +48,7 @@
                     <p class="section__text">High level experience in web design and developement. Believe in quality work.</p>
                 </div>
                 <br><br>
-                <a href="#contact" class="btn btn-contact-me">Contact Me</i></a>
+                <a href="#contact" class="btn btn-contact-me">Contact Me</a>
             </div>
             <picture class="hero__image--wrapper">
                 <img src="{% static 'images/doge.png' %}" alt="placeholder image" class="hero-image">
@@ -68,6 +69,101 @@
                     <p class="section__text">A passionate developer and a computer enthusiast. Since my childhood I have always had a keen interest in computing more specifically, in web and networking. The Internet has always fascinated me and now I have decided to persue this professionally woking as a developer.</p>
                 </div>
             </div> 
+        </section>
+        <section class="section skills" id="skills">
+            <h1 class="section__title">Skills</h1>
+            <h3 class="section__subtitle">My technical knowledge</h3>
+            <div class="skills__content-wrapper">
+                <div class="skills__panel">
+                    <h3 class="skills__title">Web</h3>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">HTML</p>
+                            <p class="skills__name-progress">90%</p>
+                        </div>
+                        <progress id="skills__progress" value="90" max="100">90%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">CSS</p>
+                            <p class="skills__name-progress">60%</p>
+                        </div>
+                        <progress id="skills__progress" value="60" max="100">60%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">JavaScript</p>
+                            <p class="skills__name-progress">50%</p>
+                        </div>
+                        <progress id="skills__progress" value="50" max="100">50%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">Django</p>
+                            <p class="skills__name-progress">70%</p>
+                        </div>
+                        <progress id="skills__progress" value="70" max="100">70%</progress>
+                    </div>
+                </div>
+                <div class="skills__panel">
+                    <h3 class="skills__title">Languages</h3>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">Python</p>
+                            <p class="skills__name-progress">90%</p>
+                        </div>
+                        <progress id="skills__progress" value="90" max="100">90%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">C++</p>
+                            <p class="skills__name-progress">30%</p>
+                        </div>
+                        <progress id="skills__progress" value="30" max="100">30%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">Bash</p>
+                            <p class="skills__name-progress">40%</p>
+                        </div>
+                        <progress id="skills__progress" value="40" max="100">40%</progress>
+                    </div>
+                </div>
+                <div class="skills__panel">
+                    <h3 class="skills__title">Design</h3>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">paint.NET</p>
+                            <p class="skills__name-progress">70%</p>
+                        </div>
+                        <progress id="skills__progress" value="70" max="100">70%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">Figma</p>
+                            <p class="skills__name-progress">30%</p>
+                        </div>
+                        <progress id="skills__progress" value="30" max="100">30%</progress>
+                    </div>
+                </div>
+                <div class="skills__panel">
+                    <h3 class="skills__title">Software</h3>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">Git / GitHub</p>
+                            <p class="skills__name-progress">70%</p>
+                        </div>
+                        <progress id="skills__progress" value="90" max="100">90%</progress>
+                    </div>
+                    <div class="skills__web">
+                        <div class="skills__name-wrapper">
+                            <p class="skills__name">VSCode</p>
+                            <p class="skills__name-progress">60%</p>
+                        </div>
+                        <progress id="skills__progress" value="60" max="100">60%</progress>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section projects" id="projects">
             <h1 class="section__title">Projects</h1>
