--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPortfolio</title>
     {% load static %}
-    <script src="{% static 'js/script.js' %}"></script>
+    <link rel="icon" type="image/x-icon" href="{% static '/images/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="{% static 'js/script.js' %}"></script>
 </head>
 <body>
     <header class="header">
@@ -51,7 +52,7 @@
                 <a href="#contact" class="btn btn-contact-me">Contact Me</a>
             </div>
             <picture class="hero__image--wrapper">
-                <img src="{% static 'images/doge.png' %}" alt="placeholder image" class="hero-image">
+                <img src="{% static 'images/doge1.png' %}" alt="placeholder image" class="hero-image">
             </picture>
         </section>
         <section class="section about" id="about">
@@ -62,7 +63,7 @@
                     <h4 class="section__quote--credit">Youtube Comments Section</h4>
                 </div> {% endcomment %}
                 <picture class="about__image--wrapper">
-                    <img src="{% static 'images/doge.png' %}" alt="placeholder image" class="about__image">
+                    <img src="{% static 'images/doge2.png' %}" alt="placeholder image" class="about__image">
                 </picture>
                 <div class="about__text-wrapper">
                     <h1 class="section__subtitle">Introduction</h1>
