--- a/templates/projects/gui-calculator.html
+++ b/templates/projects/gui-calculator.html
@@ -23,10 +23,11 @@
     <h4>Run the main file</h4>
     <br>
     <h2>Preview</h2>
-    <p>
-        <img src="../images/screenshots/calculator-preview.PNG" img not found">
-        <img src="../images/screenshots/calculator-preview-history.PNG" img not found">
-    </p>
+    <picture>
+        {% load static %}
+        <img src="{% static '/images/screenshots/calculator-preview.PNG' %}" alt="img not found">
+        <img src="{% static '/images/screenshots/calculator-preview-history.PNG' %}" alt="img not found">
+    </picture>
 </body>
 
 </html>
