--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="100%" height="100%" viewBox="2 18 124.00598907470703 92.0009994506836" class="logo"><g fill="#705bd7"><path d="M126 42.716v-8.658c0-2.835-2.503-5.142-5.581-5.142h-19.451l-.001-5.331C100.836 20.401 98.422 18 95.351 18H7.533C4.482 18 2 20.504 2 23.582v52.739c0 .155.022.305.055.45v11.405c0 3.078 2.482 5.582 5.533 5.582h30.396a11.05 11.05 0 0 1-2.459 9.303l-2.019 2.303a2 2 0 0 0 1.504 3.319h33.227a2 2 0 0 0 1.504-3.319l-2.063-2.352c-2.349-2.508-3.269-5.89-2.586-9.254h11.264l.036 1.414c.007.253.064.493.156.715v8.972c0 2.835 2.503 5.142 5.581 5.142h38.222c3.078 0 5.581-2.307 5.581-5.142v-9.173a2.01 2.01 0 0 0 .074-.507L126 42.716zm-86.663 61.966a15.112 15.112 0 0 0 2.719-10.839h18.962c-.535 3.873.479 7.792 2.831 10.839H39.337zm41.21-11.558V44.716H122v48.437h-18.862l-22.591-.029zM122 34.058v6.658H80.547v-6.658c0-.63.709-1.142 1.581-1.142h38.291c.872 0 1.581.512 1.581 1.142zM6 23.582C6 22.725 6.702 22 7.533 22h87.818c1.016 0 1.583.88 1.617 1.667v5.249h-14.84c-1.946 0-3.66.924-4.659 2.318H34.617a2 2 0 0 0 0 4h41.93v10.951h-41.93a2 2 0 0 0 0 4h41.93v10.951h-41.93a2 2 0 0 0 0 4h41.93v9.185H6V23.582zm.055 64.594v-9.854h70.492v11.437H7.588c-.831-.001-1.533-.726-1.533-1.583zM120.35 106H82.128c-.872 0-1.581-.512-1.581-1.142v-7.706h22.581l18.803.024v7.682c0 .63-.709 1.142-1.581 1.142z"></path><ellipse cx="101.962" cy="101.576" rx=".689" ry=".698"></ellipse><path d="M101.962 98.878c-1.483 0-2.689 1.21-2.689 2.698s1.206 2.698 2.689 2.698c1.482 0 2.688-1.21 2.688-2.698s-1.205-2.698-2.688-2.698zm0 4c-.723 0-1.312-.584-1.312-1.302s.588-1.302 1.312-1.302 1.311.584 1.311 1.302-.587 1.302-1.311 1.302zM20.15 28.525a1.664 1.664 0 0 0-2.146 0c-.305.265-.48.639-.48 1.024s.175.76.533 1.064l4.199 2.772-4.251 2.812c-.305.265-.48.638-.48 1.023 0 .387.174.761.479 1.026.307.267.701.397 1.088.397.373 0 .737-.121 1.008-.359l6.074-4.077c.25-.21.393-.51.393-.822s-.144-.612-.436-.854l-5.981-4.006zm0 14.8a1.659 1.659 0 0 0-2.146 0c-.305.265-.48.639-.48 1.024s.175.76.533 1.064l4.199 2.771-4.251 2.813c-.305.265-.48.639-.48 1.024s.175.76.48 1.024c.307.267.701.397 1.088.397.373 0 .737-.121 1.008-.359l6.075-4.077c.25-.21.393-.51.393-.821 0-.313-.143-.612-.436-.854l-5.983-4.006zm0 14.799a1.664 1.664 0 0 0-2.146 0c-.31.27-.479.634-.479 1.024 0 .392.17.756.533 1.065l4.199 2.771-4.251 2.813c-.305.265-.48.639-.48 1.024s.175.76.48 1.024c.307.267.701.397 1.088.397.373 0 .737-.121 1.008-.359l6.074-4.077c.25-.21.393-.51.393-.822s-.144-.612-.436-.854l-5.983-4.006zm74.077 5.467c0-.432-.188-.832-.53-1.13-.669-.584-1.719-.582-2.395.006l-6.531 5.898c-.253.229-.392.535-.392.862s.139.634.393.862l6.531 5.899.007.007c.334.29.764.436 1.193.436s.859-.146 1.194-.437c.342-.298.53-.699.53-1.13 0-.432-.188-.833-.53-1.131l-5.182-4.507 5.182-4.507a1.48 1.48 0 0 0 .53-1.128zm23.514 4.709l-7.005-5.874a1.851 1.851 0 0 0-2.388 0c-.342.298-.53.698-.53 1.13s.188.832.53 1.13l5.182 4.507-5.182 4.507c-.342.298-.53.698-.53 1.13s.188.832.53 1.13c.336.292.767.438 1.196.438.428 0 .854-.144 1.185-.432l7.012-5.879c.272-.229.429-.554.429-.894s-.157-.666-.429-.893zm-12.553-6.154c-.838-.376-1.842-.086-2.283.66l-6.779 11.362-.001.001a1.431 1.431 0 0 0-.138 1.174c.133.42.458.772.889.966.248.111.51.164.768.164.613 0 1.201-.299 1.51-.821l6.788-11.362c.214-.363.263-.781.137-1.177a1.612 1.612 0 0 0-.891-.967z"></path></g></svg>
+            <svg version="1.1" id="svg_null" class="logo-svg" viewBox="149 109 202 168.02"><g id="root" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><rect id="background" fill="none" x="0" y="0" width="500" height="500"></rect><g id="Group" transform="translate(40.000000, 309.000000)"><rect id="Rectangle-82" x="0" y="0" width="420" height="45"></rect><text id="headerText" font-family="Roboto" font-size="40" font-weight="700" line-spacing="40" letter-spacing="4" fill="#000" data-text-alignment="C" font-style="normal"><tspan x="210" y="222.5"></tspan></text></g><g id="Group-2" transform="translate(40.000000, 362.000000)"><rect id="Rectangle" x="0" y="0" width="420" height="32"></rect><text id="captionText" font-family="Roboto" font-size="25" font-weight="300" letter-spacing="2.5" fill="#000" data-text-alignment="C" font-style="normal"><tspan x="210" y="140"></tspan></text></g><g id="shape" transform="translate(149.000000, 109.000000)"><polygon id="shape.secondary" fill-opacity=".02" fill="#645fce" points="85.089 99.343 85.089 79.769 94.916 89.557"></polygon><polygon id="shape.secondary" fill-opacity=".6" fill="#645fce" points="116.912 168 85.658 168 85.658 115.861 116.912 84.736"></polygon><polygon id="shape.secondary" fill-opacity=".8" fill="#645fce" points="159.455 168 128.201 168 128.201 80.341 159.455 49.217"></polygon><polygon id="shape.secondary" fill="#645fce" points="202 168 170.746 168 170.746 31.123 202 0"></polygon><polygon id="shape.secondary" fill-opacity=".4" fill="#645fce" points="74.367 127.105 74.367 168 33.301 168"></polygon><polygon id="shape.secondary" fill-opacity=".5" fill="#645fce" points="130.037 0 101 28.917 71.963 0"></polygon><polygon id="shape.primary" fill-opacity=".5" fill="#40356f" points="130.037 0 101 28.917 71.963 0"></polygon><polygon id="shape.primary" fill-opacity=".8" fill="#40356f" points="42.545 140.47 42.545 43.008 73.799 74.132 73.799 109.346"></polygon><polygon id="shape.primary" fill-opacity=".6" fill="#40356f" points="85.089 99.343 85.089 79.769 94.916 89.557"></polygon><polygon id="shape.primary" fill="#40356f" points="21.134 168 0 168 0 0 31.254 31.123 31.254 157.923"></polygon><polygon id="shape.primary" fill-opacity=".6" fill="#40356f" points="74.367 127.105 74.367 168 33.301 168"></polygon></g></g></svg>
         </div>
         <nav class="navbar">
             <ul class="navbar__list">
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="skills__panel">
-                    <h3 class="skills__title">Software</h3>
+                    <h3 class="skills__title">Tools</h3>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Git / GitHub</p>
@@ -179,7 +179,7 @@
                         <p class="projects__card--text">A general purpose discord bot built with discord.py api wrapper in python</p>
                     </div>
                     <div class="projects__card--info">
-                        <a href="{% static 'projects/discord-bot.html' %}">View project</a>
+                        <a href="./discord-bot">View project</a>
                     </div>
                 </div>
                 <div class="projects__card">
@@ -191,7 +191,7 @@
                         <p class="projects__card--text">A command line interface chat app built with pyhton - socket and multithreading</p>
                     </div>
                     <div class="projects__card--info">
-                        <a href="{% static 'projects/chat-app.html' %}">View project</a>
+                        <a href="./chat-app">View project</a>
                     </div>
                 </div>
                 <div class="projects__card">
@@ -203,7 +203,7 @@
                         <p class="projects__card--text">Simple GUI calculator made with Pyhton tkinter module</p>
                     </div>
                     <div class="projects__card--info">
-                        <a href="{% static 'projects/gui-calculator.html' %}">View project</a>
+                        <a href="./gui-calculator">View project</a>
                     </div>
                 </div>
                 
