--- a/static/css/style.css
+++ b/static/css/style.css
@@ -178,7 +178,7 @@ input {
 }
 
 .btn {
-    padding: 0.5rem;
+    padding: 1rem;
     background-color: var(--body-color);
     border: .25rem solid var(--body-color);
     border-radius: .25rem;
@@ -387,6 +387,7 @@ input {
 .contact__content-wrapper {
     display: flex;
     justify-content: space-around;
+    margin-top: 2rem;
 }
 
 .contact__link-wrapper {
@@ -398,6 +399,12 @@ input {
 
 .contact__link {
     display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
+.contact__link--icon {
+    padding: 1rem;
 }
 
 .contact__link--title {
@@ -417,6 +424,8 @@ input {
     background-color: var(--text-color);
     border-radius: .5rem;
     padding: .75rem 1rem .25rem;
+    margin-bottom: .25rem;
+    margin-left: .25rem;
 }
 
 .contact__form--field-text {
@@ -432,13 +441,23 @@ input {
     width: 50%;
 }
 
+.contact__form--field-message {
+    resize: none;
+}
+
 .contact__form-input {
     width: 100%;
-    background-color: var(--input-color);
-    color: var(--text-color);
+    background-color: var(--text-color);
+    color: white;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     border: none;
     outline: none;
     padding: .25rem .5rem .5rem 8;
+}
+
+.btn-submit {
+    margin-top: 1rem;
+    background-color: var(--text-color);
+    color: white;
 }
