--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
             <div class="contact__content-wrapper">
                 <div class="contact__link-wrapper">
                     <div class="contact__link">
-                        <div>
+                        <div class="contact__link--icon">
                             <i class="fa-solid fa-2x fa-envelope"></i>
                         </div>
                         <div>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <div class="contact__link">
-                        <div>
+                        <div class="contact__link--icon">
                             <i class="fa-solid fa-2x fa-phone"></i>
                         </div>
                         <div>
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="contact__link">
-                        <div>
+                        <div class="contact__link--icon">
                             <i class="fa-solid fa-2x fa-location-dot"></i>
                         </div>
                         <div>
@@ -280,9 +280,9 @@
                     </div>
                     <div class="contact__form--field">
                         <label for="mesage" class="contact__form--field-text">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10" class="contact__form-input" required></textarea>
+                        <textarea name="message" id="message" cols="30" rows="10" class="contact__form-input contact__form--field-message" required></textarea>
                     </div>                    
-                    <button class="btn">Submit</button>
+                    <button class="btn btn-submit">Send message  <i class="fa-solid fa-arrow-right"></i></button>
                 </from>
             </div>
         </section>
