--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@
 
     /*========== Margenes ==========*/
     /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
-    --page-indent: 2rem;
+    --page-indent: 15rem;
 
 
     /*========== z index ==========*/
@@ -122,10 +122,9 @@ input {
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
     height: 100%;
-    padding: 0 var(--page-indent);
     scroll-snap-align: start;
-
-    padding: 3rem 5rem;
+    padding: 0 var(--page-indent);
+    /* padding: 3rem 5rem; */
     /* border: 5px solid black; */
 }
 
@@ -207,13 +206,7 @@ input {
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-
-    padding: 0 var(--page-indent);
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+    padding: 2rem var(--page-indent);
     background-color: var(--body-color);
 }
 
@@ -228,6 +221,12 @@ input {
 }
 
 /*==================== NAV ====================*/
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .navbar__list {
     display: flex;
 }
@@ -252,7 +251,7 @@ input {
     background-color: var(--primary-color);
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .hero__title,
@@ -290,7 +289,7 @@ input {
 .about__content-wrapper {
     margin-top: 3rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .about__text-wrapper {
@@ -386,7 +385,7 @@ input {
 
 .contact__content-wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 2rem;
 }
 
@@ -400,11 +399,11 @@ input {
 .contact__link {
     display: flex;
     align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
 }
 
 .contact__link--icon {
-    padding: 1rem;
+    padding-right: 1rem;
 }
 
 .contact__link--title {
