styled popup message; improved backend validation

--- a/templates/index.html
+++ b/templates/index.html
@@ -227,6 +227,7 @@
                         {% endif %}
 
                         <p class="popup__text"> {{ message }} </p>
+                        <p class="popup__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, iste. </p>
                         <button class="btn btn-flex" onclick="removePopup()">Ok</button>
                     </div>
                 {% endfor %}
