--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,6 @@
 /*==================== VARIABLES CSS ====================*/
 :root {
     --header-height: 7rem;
-    /* --footer-height: 2rem; */
 
     /*========== Colors ==========*/
     /* --hue-color: 250; */
@@ -146,7 +145,7 @@ input {
     border: 2px solid black;
     text-align: center;
     width: 400px;
-    background: #fff;
+    background: var(--primary-color);
     border-radius: 6px;
     position: absolute;
     top: 50%;
@@ -159,6 +158,7 @@ input {
 .popup__image {
     margin-top: -3.5rem;
     background-color: var(--title-color);
+    color: white;
     border-radius: 50%;
     padding: 1.5rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -212,7 +212,6 @@ input {
 
 .main {
     margin-top: var(--header-height);
-    /* height: calc(100vh - var(--header-height) - var(--footer-height)); */
     height: calc(100vh - var(--header-height));
 
     scroll-behavior: smooth;
@@ -307,7 +306,6 @@ input {
 
 .skills__content-wrapper {
     margin: 3rem auto;
-    /* max-width: calc(100vh - var(--page-indent)); */
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     row-gap: 2rem;
