--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
 
 /*==================== VARIABLES CSS ====================*/
 :root {
-    --header-height: 7rem;
+    --navbar-height: 10rem;
 
     /*========== Colors ==========*/
     /* --hue-color: 250; */
@@ -62,6 +62,7 @@ body {
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--primary-color);
+    background-image: url("./../images/flat-mountains.svg");
     color: var(--text-color);
 }
 
@@ -200,19 +201,18 @@ input {
 
 /*==================== LAYOUT ====================*/
 .header {
-    height: var(--header-height);
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    padding: 2rem var(--page-indent);
+    padding: 0 var(--page-indent);
     background-color: var(--body-color);
 }
 
 .main {
-    margin-top: var(--header-height);
-    height: calc(100vh - var(--header-height));
+    margin-top: var(--navbar-height);
+    height: calc(100vh - var(--navbar-height));
 
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
@@ -224,6 +224,7 @@ input {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: var(--navbar-height);
 }
 
 .navbar__list {
@@ -247,7 +248,8 @@ input {
 /*==================== SECTION ====================*/
 /*=============== Hero Section ===============*/
 .hero {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
+    /* background-color: rgba(255, 255, 252, 0.7); */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -282,7 +284,7 @@ input {
 
 /*=============== About Section ===============*/
 .about {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
 }
 
 .about__content-wrapper {
@@ -301,7 +303,7 @@ input {
 
 /*=============== Skills Section ===============*/
 .skills {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
 }
 
 .skills__content-wrapper {
@@ -329,7 +331,7 @@ input {
 
 /*=============== Projects Section ===============*/
 .projects {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
 }
 
 .projects__cards-container {
@@ -378,7 +380,7 @@ input {
 
 /*=============== Contact Section ===============*/
 .contact {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
 }
 
 .contact__content-wrapper {
